# hassio-package-watcher

./: .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml  repository.yaml
fixtures/: cases.yaml
package_watcher/: __init__.py  __main__.py  backtest.py  camera.py  config.py  detector.py  events.py  evidence.py  harness.py  review.py  service.py  sinks.py  synthetic.py  verify.py
package_watcher/triggers/: unifi.py
package_watcher/ui/: __init__.py  app.py  hass.py  protect.py
package_watcher_addon/: Dockerfile  config.yaml  run.sh
tests/: test_config.py  test_detector.py  test_events_evidence.py  test_fixtures.py  test_harness.py  test_person_gated.py  test_review.py  test_ui.py  test_verify.py  videogen.py
