[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "package-watcher"
version = "0.1.0"
description = "CPU-only package/new-object detection for fixed Unifi Protect cameras, with evidence output for LLM verification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
unifi = ["uiprotect>=6.0"]
ui = ["flask>=3.0"]
# Second-stage semantic verification (Florence-2 on CPU). Install torch from
# the CPU index to avoid CUDA wheels: pip install torch --index-url
# https://download.pytorch.org/whl/cpu && pip install ".[verify]"
verify = ["torch>=2.1", "transformers>=4.54", "timm>=0.9", "einops>=0.7",
          "pillow>=10"]
dev = ["pytest>=8.0", "flask>=3.0"]

[project.scripts]
package-watcher = "package_watcher.__main__:main"

[tool.setuptools.packages.find]
include = ["package_watcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
